--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,6 +14,9 @@ jobs:
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
+    defaults: 
+      run:
+        working-directory: ./terraform
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -25,29 +28,24 @@ jobs:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Format
-        working-directory: ./terraform
         id: fmt
         run: terraform fmt -check
 
       - name: Terraform Init
-        working-directory: ./terraform
         id: init
         run: terraform init
 
       - name: Terraform Validate
-        working-directory: ./terraform
         id: validate
         run: terraform validate -no-color
 
       - name: Terraform Plan
-        working-directory: ./terraform
         id: plan
         if: github.event_name == 'pull_request'
         run: terraform plan -no-color
         continue-on-error: true
 
       - uses: actions/github-script@0.9.0
-        working-directory: ./terraform
         if: github.event_name == 'pull_request'
         env:
           PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
@@ -77,11 +75,9 @@ jobs:
             })
 
       - name: Terraform Plan Status
-        working-directory: ./terraform
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
       - name: Terraform Apply
-        working-directory: ./terraform
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve
